[gd_scene load_steps=5 format=3 uid="uid://bp2cy3iektv58"]

[ext_resource type="Script" path="res://survivors_game.gd" id="1_0pf6x"]
[ext_resource type="PackedScene" uid="uid://b4qdfae1xnomv" path="res://player.tscn" id="1_0qsk5"]
[ext_resource type="PackedScene" uid="uid://dhhi1leun4jhb" path="res://pine_tree.tscn" id="2_88eyd"]

[sub_resource type="Curve2D" id="Curve2D_y4ubq"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -245, -160, 0, 0, 0, 0, 2114, -182, 0, 0, 0, 0, 2109, 1217, 0, 0, 0, 0, -246, 1206, 0, 0, 0, 0, -241, 98, 0, 0, 0, 0, -243, -158)
}
point_count = 6

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_0pf6x")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -30

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 1919.0
offset_bottom = 1097.0
scale = Vector2(1.02396, 0.991337)

[node name="Player" parent="." instance=ExtResource("1_0qsk5")]
position = Vector2(861, 504)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-861, -504)
curve = SubResource("Curve2D_y4ubq")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-245, -160)
rotation = -0.00932572

[node name="PineTree" parent="." instance=ExtResource("2_88eyd")]
position = Vector2(382, 469)

[node name="PineTree2" parent="." instance=ExtResource("2_88eyd")]
position = Vector2(439, 502)

[node name="PineTree3" parent="." instance=ExtResource("2_88eyd")]
position = Vector2(332, 514)

[node name="PineTree4" parent="." instance=ExtResource("2_88eyd")]
position = Vector2(1390, 282)

[node name="PineTree5" parent="." instance=ExtResource("2_88eyd")]
position = Vector2(1555, 477)

[node name="PineTree6" parent="." instance=ExtResource("2_88eyd")]
position = Vector2(1287, 459)

[node name="PineTree7" parent="." instance=ExtResource("2_88eyd")]
position = Vector2(783, 242)

[node name="PineTree8" parent="." instance=ExtResource("2_88eyd")]
position = Vector2(484, 854)

[node name="PineTree9" parent="." instance=ExtResource("2_88eyd")]
position = Vector2(1034, 914)

[node name="PineTree10" parent="." instance=ExtResource("2_88eyd")]
position = Vector2(1112, 931)

[node name="PineTree11" parent="." instance=ExtResource("2_88eyd")]
position = Vector2(1284, 673)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.407843)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.5
offset_top = -11.5
offset_right = 62.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 156
text = "You Died...Loser"

[node name="Button" type="Button" parent="GameOver/ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.441
anchor_top = 0.625
anchor_right = 0.475
anchor_bottom = 0.659
offset_left = 0.279968
offset_right = -6.10352e-05
offset_bottom = 0.279968
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"FlatButton"
disabled = true
text = "Restart"

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="GameOver/ColorRect/Button" to="." method="_on_button_pressed"]
